@@ -4,7 +4,9 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -272,7 +274,7 @@ public class ArrayCopyIntrinsificationTest extends GraalCompilerTest {
     @Test
     public void testCopyRows() {
         Object[][] rows = {{"a1", "a2", "a3", "a4"}, {"b1", "b2", "b3", "b4"}, {"c1", "c2", "c3", "c4"}};
-        test("copyRows", rows, 4, new Integer(rows.length));
+        test("copyRows", rows, 4, Integer.valueOf(rows.length));
     }
 
     public static Object[][] copyRows(Object[][] rows, int rowSize, Integer rowCount) {
