@@ -4,7 +4,9 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -24,64 +26,37 @@ package com.oracle.svm.core.jdk;
 
 // Checkstyle: allow reflection
 
-import static com.oracle.svm.core.annotate.RecomputeFieldValue.Kind.ArrayBaseOffset;
-import static com.oracle.svm.core.annotate.RecomputeFieldValue.Kind.ArrayIndexScale;
-import static com.oracle.svm.core.annotate.RecomputeFieldValue.Kind.Reset;
-
-import java.io.FileDescriptor;
-import java.io.IOException;
+import java.lang.ref.ReferenceQueue;
+import java.util.function.Function;
 
 import org.graalvm.compiler.nodes.extended.MembarNode;
+import org.graalvm.compiler.serviceprovider.GraalServices;
 import org.graalvm.compiler.word.Word;
+import org.graalvm.nativeimage.Platform;
+import org.graalvm.nativeimage.Platforms;
 import org.graalvm.nativeimage.UnmanagedMemory;
 import org.graalvm.word.Pointer;
 import org.graalvm.word.WordFactory;
 
 import com.oracle.svm.core.MemoryUtil;
-import com.oracle.svm.core.UnsafeAccess;
 import com.oracle.svm.core.annotate.Alias;
 import com.oracle.svm.core.annotate.Delete;
 import com.oracle.svm.core.annotate.RecomputeFieldValue;
 import com.oracle.svm.core.annotate.Substitute;
 import com.oracle.svm.core.annotate.TargetClass;
 import com.oracle.svm.core.annotate.Uninterruptible;
-import com.oracle.svm.core.config.ConfigurationValues;
 import com.oracle.svm.core.hub.DynamicHub;
 import com.oracle.svm.core.hub.LayoutEncoding;
-import com.oracle.svm.core.os.OSInterface;
+import com.oracle.svm.core.log.Log;
+import com.oracle.svm.core.os.VirtualMemoryProvider;
 import com.oracle.svm.core.snippets.KnownIntrinsics;
 
 import jdk.vm.ci.code.MemoryBarriers;
-import sun.misc.Cleaner;
-import sun.misc.JavaAWTAccess;
 import sun.misc.Unsafe;
 
 @TargetClass(sun.misc.Unsafe.class)
 @SuppressWarnings({"static-method"})
 final class Target_sun_misc_Unsafe {
-
-    // Checkstyle: stop
-
-    @Alias @RecomputeFieldValue(kind = ArrayBaseOffset, declClass = boolean[].class, isFinal = true) private static int ARRAY_BOOLEAN_BASE_OFFSET;
-    @Alias @RecomputeFieldValue(kind = ArrayBaseOffset, declClass = byte[].class, isFinal = true) private static int ARRAY_BYTE_BASE_OFFSET;
-    @Alias @RecomputeFieldValue(kind = ArrayBaseOffset, declClass = short[].class, isFinal = true) private static int ARRAY_SHORT_BASE_OFFSET;
-    @Alias @RecomputeFieldValue(kind = ArrayBaseOffset, declClass = char[].class, isFinal = true) private static int ARRAY_CHAR_BASE_OFFSET;
-    @Alias @RecomputeFieldValue(kind = ArrayBaseOffset, declClass = int[].class, isFinal = true) private static int ARRAY_INT_BASE_OFFSET;
-    @Alias @RecomputeFieldValue(kind = ArrayBaseOffset, declClass = long[].class, isFinal = true) private static int ARRAY_LONG_BASE_OFFSET;
-    @Alias @RecomputeFieldValue(kind = ArrayBaseOffset, declClass = float[].class, isFinal = true) private static int ARRAY_FLOAT_BASE_OFFSET;
-    @Alias @RecomputeFieldValue(kind = ArrayBaseOffset, declClass = double[].class, isFinal = true) private static int ARRAY_DOUBLE_BASE_OFFSET;
-    @Alias @RecomputeFieldValue(kind = ArrayBaseOffset, declClass = Object[].class, isFinal = true) private static int ARRAY_OBJECT_BASE_OFFSET;
-    @Alias @RecomputeFieldValue(kind = ArrayIndexScale, declClass = boolean[].class, isFinal = true) private static int ARRAY_BOOLEAN_INDEX_SCALE;
-    @Alias @RecomputeFieldValue(kind = ArrayIndexScale, declClass = byte[].class, isFinal = true) private static int ARRAY_BYTE_INDEX_SCALE;
-    @Alias @RecomputeFieldValue(kind = ArrayIndexScale, declClass = short[].class, isFinal = true) private static int ARRAY_SHORT_INDEX_SCALE;
-    @Alias @RecomputeFieldValue(kind = ArrayIndexScale, declClass = char[].class, isFinal = true) private static int ARRAY_CHAR_INDEX_SCALE;
-    @Alias @RecomputeFieldValue(kind = ArrayIndexScale, declClass = int[].class, isFinal = true) private static int ARRAY_INT_INDEX_SCALE;
-    @Alias @RecomputeFieldValue(kind = ArrayIndexScale, declClass = long[].class, isFinal = true) private static int ARRAY_LONG_INDEX_SCALE;
-    @Alias @RecomputeFieldValue(kind = ArrayIndexScale, declClass = float[].class, isFinal = true) private static int ARRAY_FLOAT_INDEX_SCALE;
-    @Alias @RecomputeFieldValue(kind = ArrayIndexScale, declClass = double[].class, isFinal = true) private static int ARRAY_DOUBLE_INDEX_SCALE;
-    @Alias @RecomputeFieldValue(kind = ArrayIndexScale, declClass = Object[].class, isFinal = true) private static int ARRAY_OBJECT_INDEX_SCALE;
-
-    // Checkstyle: resume
 
     @Substitute
     private long allocateMemory(long bytes) {
@@ -135,10 +110,9 @@ final class Target_sun_misc_Unsafe {
     }
 
     @Substitute
-    private int pageSize() {
-        // This assumes that the page size of the Substrate VM
-        // is the same as the page size of the hosted VM.
-        return Util_sun_misc_Unsafe.hostedVMPageSize;
+    @Uninterruptible(reason = "Called from uninterruptible code.", mayBeInlined = true)
+    int pageSize() {
+        return (int) VirtualMemoryProvider.get().getGranularity().rawValue();
     }
 
     @Substitute
@@ -176,74 +150,162 @@ final class Target_sun_misc_Unsafe {
     }
 
     @Substitute
+    boolean shouldBeInitialized(Class<?> c) {
+        return !DynamicHub.fromClass(c).isInitialized();
+    }
+
+    @Substitute
     public void ensureClassInitialized(Class<?> c) {
-        if (c == null) {
-            throw new NullPointerException();
-        }
-        // no-op: all classes that exist in our image must have been initialized
+        DynamicHub.fromClass(c).ensureInitialized();
     }
 }
 
-final class Util_sun_misc_Unsafe {
-    /**
-     * Cache the size of a page in the hosted VM for use in the SubstrateVM.
-     */
-    static final int hostedVMPageSize = UnsafeAccess.UNSAFE.pageSize();
-}
-
-@TargetClass(sun.misc.MessageUtils.class)
+@TargetClass(className = "sun.misc.MessageUtils", onlyWith = JDK8OrEarlier.class)
 final class Target_sun_misc_MessageUtils {
+
+    /*
+     * Low-level logging support in the JDK. Methods must not use char-to-byte conversions (because
+     * they are used to report errors in the converters). We just redirect to the low-level SVM log
+     * infrastructure.
+     */
 
     @Substitute
     private static void toStderr(String msg) {
-        Util_sun_misc_MessageUtils.output(FileDescriptor.err, msg);
+        Log.log().string(msg);
     }
 
     @Substitute
     private static void toStdout(String msg) {
-        Util_sun_misc_MessageUtils.output(FileDescriptor.out, msg);
+        Log.log().string(msg);
     }
 }
 
-final class Util_sun_misc_MessageUtils {
-
-    static void output(FileDescriptor target, String msg) {
-        byte[] bytes = new byte[msg.length()];
-        for (int i = 0; i < msg.length(); i++) {
-            bytes[i] = (byte) msg.charAt(i);
-        }
-
-        OSInterface os = ConfigurationValues.getOSInterface();
-        try {
-            os.writeBytes(target, bytes);
-        } catch (IOException ex) {
-            // Ignore, since we are in low-level debug printing code.
+@Platforms(Platform.HOSTED_ONLY.class)
+class Package_jdk_internal_ref implements Function<TargetClass, String> {
+    @Override
+    public String apply(TargetClass annotation) {
+        if (GraalServices.Java8OrEarlier) {
+            return "sun.misc." + annotation.className();
+        } else {
+            return "jdk.internal.ref." + annotation.className();
         }
     }
 }
 
-@TargetClass(sun.misc.Cleaner.class)
-final class Target_sun_misc_Cleaner {
-    @Alias @RecomputeFieldValue(kind = Reset)//
-    private static Cleaner first;
+@TargetClass(classNameProvider = Package_jdk_internal_ref.class, className = "Cleaner")
+final class Target_jdk_internal_ref_Cleaner {
+
+    @Alias @RecomputeFieldValue(kind = RecomputeFieldValue.Kind.Reset)//
+    static Target_jdk_internal_ref_Cleaner first;
+
+    /**
+     * Contrary to the comment on {@code sun.misc.Cleaner}.dummyQueue, in SubstrateVM the queue can
+     * have Cleaner instances on it, because SubstrateVM does not have a ReferenceHandler thread to
+     * clean instances, so SubstrateVM puts them on the queue and drains the queue after collections
+     * in {@link SunMiscSupport#drainCleanerQueue()}.
+     * <p>
+     * Cleaner instances that do bad things are even worse in SubstrateVM than they are in the
+     * HotSpot VM, because they are run on the thread that started a collection.
+     * <p>
+     * Changing the access from `private` to `protected`, and reinitializing to an empty queue.
+     */
+    @Alias @RecomputeFieldValue(kind = RecomputeFieldValue.Kind.FromAlias)//
+    static ReferenceQueue<Object> dummyQueue = new ReferenceQueue<>();
+
+    @Alias
+    native void clean();
 }
 
-@TargetClass(sun.misc.SharedSecrets.class)
-final class Target_sun_misc_SharedSecrets {
+@TargetClass(className = "jdk.internal.ref.CleanerImpl", onlyWith = JDK9OrLater.class)
+final class Target_jdk_internal_ref_CleanerImpl {
+
+    @Alias @RecomputeFieldValue(kind = RecomputeFieldValue.Kind.NewInstance, declClassName = "jdk.internal.ref.CleanerImpl$PhantomCleanableRef")//
+    Target_jdk_internal_ref_PhantomCleanable phantomCleanableList;
+
+    @Alias @RecomputeFieldValue(kind = RecomputeFieldValue.Kind.NewInstance, declClassName = "jdk.internal.ref.CleanerImpl$WeakCleanableRef")//
+    Target_jdk_internal_ref_WeakCleanable weakCleanableList;
+
+    @Alias @RecomputeFieldValue(kind = RecomputeFieldValue.Kind.NewInstance, declClassName = "jdk.internal.ref.CleanerImpl$SoftCleanableRef")//
+    Target_jdk_internal_ref_SoftCleanable softCleanableList;
+
+    @Alias @RecomputeFieldValue(kind = RecomputeFieldValue.Kind.NewInstance, declClassName = "java.lang.ref.ReferenceQueue")//
+    ReferenceQueue<Object> queue;
+}
+
+@TargetClass(className = "jdk.internal.ref.PhantomCleanable", onlyWith = JDK9OrLater.class)
+final class Target_jdk_internal_ref_PhantomCleanable {
+}
+
+@TargetClass(className = "jdk.internal.ref.WeakCleanable", onlyWith = JDK9OrLater.class)
+final class Target_jdk_internal_ref_WeakCleanable {
+}
+
+@TargetClass(className = "jdk.internal.ref.SoftCleanable", onlyWith = JDK9OrLater.class)
+final class Target_jdk_internal_ref_SoftCleanable {
+}
+
+@Platforms(Platform.HOSTED_ONLY.class)
+class Package_jdk_internal_perf implements Function<TargetClass, String> {
+    @Override
+    public String apply(TargetClass annotation) {
+        if (GraalServices.Java8OrEarlier) {
+            return "sun.misc." + annotation.className();
+        } else {
+            return "jdk.internal.perf." + annotation.className();
+        }
+    }
+}
+
+/** PerfCounter methods that access the lb field fail with SIGSEV. */
+@TargetClass(classNameProvider = Package_jdk_internal_perf.class, className = "PerfCounter")
+final class Target_jdk_internal_perf_PerfCounter {
+
     @Substitute
-    private static JavaAWTAccess getJavaAWTAccess() {
+    @SuppressWarnings("static-method")
+    public long get() {
+        return 0;
+    }
+
+    @Substitute
+    public void set(@SuppressWarnings("unused") long var1) {
+    }
+
+    @Substitute
+    public void add(@SuppressWarnings("unused") long var1) {
+    }
+}
+
+@TargetClass(classNameProvider = Package_jdk_internal_misc.class, className = "SharedSecrets")
+final class Target_jdk_internal_misc_SharedSecrets {
+    @Substitute
+    private static Target_jdk_internal_misc_JavaAWTAccess getJavaAWTAccess() {
         return null;
     }
 }
 
-@TargetClass(value = sun.misc.URLClassPath.class, innerClass = "JarLoader")
-@Delete
-final class Target_sun_misc_URLClassPath_JarLoader {
+@TargetClass(classNameProvider = Package_jdk_internal_misc.class, className = "JavaAWTAccess")
+final class Target_jdk_internal_misc_JavaAWTAccess {
 }
 
-@TargetClass(java.net.JarURLConnection.class)
+@TargetClass(classNameProvider = Package_jdk_internal_misc.class, className = "JavaLangAccess")
+final class Target_jdk_internal_misc_JavaLangAccess {
+}
+
+@Platforms(Platform.HOSTED_ONLY.class)
+class Package_jdk_internal_loader implements Function<TargetClass, String> {
+    @Override
+    public String apply(TargetClass annotation) {
+        if (GraalServices.Java8OrEarlier) {
+            return "sun.misc." + annotation.className();
+        } else {
+            return "jdk.internal.loader." + annotation.className();
+        }
+    }
+}
+
+@TargetClass(classNameProvider = Package_jdk_internal_loader.class, className = "URLClassPath", innerClass = "JarLoader")
 @Delete
-final class Target_java_net_JarURLConnection {
+final class Target_sun_misc_URLClassPath_JarLoader {
 }
 
 /** Dummy class to have a class with the file's name. */
