@@ -4,7 +4,9 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -23,6 +25,9 @@
 package com.oracle.svm.truffle;
 
 //Checkstyle: allow reflection
+
+import static org.graalvm.compiler.java.BytecodeParserOptions.InlineDuringParsingMaxDepth;
+import static org.graalvm.compiler.nodes.graphbuilderconf.InlineInvokePlugin.InlineInfo.createStandardInlineInfo;
 
 import java.lang.reflect.Executable;
 import java.lang.reflect.Field;
@@ -43,6 +48,7 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.TreeSet;
@@ -50,37 +56,37 @@ import java.util.Vector;
 import java.util.WeakHashMap;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.locks.ReentrantLock;
-
-// Checkstyle: allow reflection
-
 import java.util.function.BooleanSupplier;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 import org.graalvm.compiler.api.replacements.SnippetReflectionProvider;
 import org.graalvm.compiler.nodes.ConstantNode;
+import org.graalvm.compiler.nodes.StructuredGraph;
 import org.graalvm.compiler.nodes.ValueNode;
 import org.graalvm.compiler.nodes.graphbuilderconf.GraphBuilderConfiguration;
-import org.graalvm.compiler.nodes.graphbuilderconf.GraphBuilderConfiguration.Plugins;
 import org.graalvm.compiler.nodes.graphbuilderconf.GraphBuilderContext;
+import org.graalvm.compiler.nodes.graphbuilderconf.InlineInvokePlugin;
 import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugin;
 import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugins;
 import org.graalvm.compiler.nodes.graphbuilderconf.InvocationPlugins.Registration;
+import org.graalvm.compiler.nodes.spi.Replacements;
 import org.graalvm.compiler.options.Option;
 import org.graalvm.compiler.phases.util.Providers;
-import org.graalvm.compiler.truffle.OptimizedCallTarget;
-import org.graalvm.compiler.truffle.PartialEvaluator;
-import org.graalvm.compiler.truffle.TruffleCallBoundary;
-import org.graalvm.compiler.truffle.nodes.asserts.NeverPartOfCompilationNode;
-import org.graalvm.compiler.truffle.phases.InstrumentPhase;
-import org.graalvm.compiler.truffle.substitutions.KnownTruffleFields;
+import org.graalvm.compiler.truffle.compiler.PartialEvaluator;
+import org.graalvm.compiler.truffle.compiler.nodes.asserts.NeverPartOfCompilationNode;
+import org.graalvm.compiler.truffle.compiler.substitutions.KnownTruffleTypes;
+import org.graalvm.compiler.truffle.runtime.OptimizedCallTarget;
+import org.graalvm.compiler.truffle.runtime.OptimizedCompilationProfile;
+import org.graalvm.compiler.truffle.runtime.TruffleCallBoundary;
 import org.graalvm.nativeimage.Feature;
 import org.graalvm.nativeimage.ImageSingletons;
+import org.graalvm.nativeimage.RuntimeReflection;
 
 import com.oracle.graal.pointsto.meta.AnalysisField;
 import com.oracle.graal.pointsto.meta.AnalysisMethod;
 import com.oracle.graal.pointsto.meta.HostedProviders;
 import com.oracle.svm.core.annotate.Alias;
-import com.oracle.svm.core.annotate.AutomaticFeature;
 import com.oracle.svm.core.annotate.Delete;
 import com.oracle.svm.core.annotate.NeverInline;
 import com.oracle.svm.core.annotate.RecomputeFieldValue;
@@ -91,16 +97,19 @@ import com.oracle.svm.core.heap.Heap;
 import com.oracle.svm.core.jdk.FilesFeature;
 import com.oracle.svm.core.jdk.FilesSupport;
 import com.oracle.svm.core.option.HostedOptionKey;
+import com.oracle.svm.core.option.HostedOptionValues;
+import com.oracle.svm.core.option.SubstrateOptionsParser;
 import com.oracle.svm.core.stack.JavaStackWalker;
 import com.oracle.svm.core.util.UserError;
 import com.oracle.svm.core.util.VMError;
-import com.oracle.svm.graal.GraalSupport;
 import com.oracle.svm.graal.hosted.GraalFeature;
 import com.oracle.svm.graal.hosted.GraalFeature.CallTreeNode;
 import com.oracle.svm.graal.hosted.GraalFeature.RuntimeBytecodeParser;
 import com.oracle.svm.hosted.FeatureImpl.AfterRegistrationAccessImpl;
 import com.oracle.svm.hosted.FeatureImpl.BeforeAnalysisAccessImpl;
-import com.oracle.svm.hosted.NativeImageOptions;
+import com.oracle.svm.hosted.FeatureImpl.BeforeCompilationAccessImpl;
+import com.oracle.svm.hosted.code.InliningUtilities;
+import com.oracle.svm.hosted.meta.HostedType;
 import com.oracle.svm.truffle.api.SubstrateOptimizedCallTarget;
 import com.oracle.svm.truffle.api.SubstratePartialEvaluator;
 import com.oracle.svm.truffle.api.SubstrateTruffleCompiler;
@@ -109,21 +118,37 @@ import com.oracle.truffle.api.CompilerAsserts;
 import com.oracle.truffle.api.CompilerDirectives;
 import com.oracle.truffle.api.Truffle;
 import com.oracle.truffle.api.TruffleRuntime;
+import com.oracle.truffle.api.frame.Frame;
 import com.oracle.truffle.api.impl.DefaultTruffleRuntime;
-import com.oracle.truffle.api.instrumentation.InstrumentableFactory;
 import com.oracle.truffle.api.instrumentation.TruffleInstrument;
+import com.oracle.truffle.api.nodes.ExplodeLoop;
 import com.oracle.truffle.api.nodes.RootNode;
 import com.oracle.truffle.api.profiles.Profile;
 
 import jdk.vm.ci.code.Architecture;
-import jdk.vm.ci.code.InstalledCode;
 import jdk.vm.ci.meta.JavaKind;
 import jdk.vm.ci.meta.MetaAccessProvider;
 import jdk.vm.ci.meta.ResolvedJavaField;
 import jdk.vm.ci.meta.ResolvedJavaMethod;
+import jdk.vm.ci.meta.ResolvedJavaType;
 
-@AutomaticFeature
 public final class TruffleFeature implements com.oracle.svm.core.graal.GraalFeature {
+
+    public static class Options {
+        @Option(help = "Print a warning message and stack trace when CompilerAsserts.neverPartOfCompilation is reachable")//
+        public static final HostedOptionKey<Boolean> TruffleCheckNeverPartOfCompilation = new HostedOptionKey<>(false);
+
+        @Option(help = "Enforce that the Truffle runtime provides the only implementation of Frame")//
+        public static final HostedOptionKey<Boolean> TruffleCheckFrameImplementation = new HostedOptionKey<>(true);
+
+        @Option(help = "Inline trivial methods in Truffle graphs during native image generation")//
+        public static final HostedOptionKey<Boolean> TruffleInlineDuringParsing = new HostedOptionKey<>(true);
+    }
+
+    /**
+     * True in the first analysis run where contexts are pre-initialized.
+     */
+    private boolean firstAnalysisRun;
 
     public static final class IsEnabled implements BooleanSupplier {
         @Override
@@ -132,49 +157,13 @@ public final class TruffleFeature implements com.oracle.svm.core.graal.GraalFeat
         }
     }
 
-    public static final class HasTruffleOnClassPath implements BooleanSupplier {
-        @Override
-        public boolean getAsBoolean() {
-            return hasTruffleOnBootClassPath();
-        }
-    }
-
-    private static final String TRUFFLE_LOOKUP_CLASSNAME = "com.oracle.truffle.api.Truffle";
-
-    public static boolean hasTruffleOnBootClassPath() {
-        Class<?> truffleOnBootClassPath = null;
-        try {
-            truffleOnBootClassPath = new ClassLoader(null) {
-                /* Classloader for bootclasspath-only lookup */
-            }.loadClass(TRUFFLE_LOOKUP_CLASSNAME);
-        } catch (ClassNotFoundException e) {
-            /* To be expected when probing */
-        }
-        return truffleOnBootClassPath != null;
-    }
-
-    @Override
-    public boolean isInConfiguration(IsInConfigurationAccess access) {
-        return NativeImageOptions.TruffleFeature.getValue() && hasTruffleOnBootClassPath();
-    }
-
-    public static class Options {
-        @Option(help = "Print a warning message and stack trace when CompilerAsserts.neverPartOfCompilation is reachable")//
-        public static final HostedOptionKey<Boolean> TruffleCheckNeverPartOfCompilation = new HostedOptionKey<>(false);
-    }
-
     public static class Support {
         public SubstrateOptimizedCallTarget createOptimizedCallTarget(OptimizedCallTarget sourceCallTarget, RootNode rootNode) {
             return new SubstrateOptimizedCallTarget(sourceCallTarget, rootNode);
         }
 
-        public SubstratePartialEvaluator createPartialEvaluator(Providers providers, GraphBuilderConfiguration configForRoot, SnippetReflectionProvider snippetReflection, Architecture architecture,
-                        InstrumentPhase.Instrumentation instrumentation) {
-            return new SubstratePartialEvaluator(providers, configForRoot, snippetReflection, architecture, instrumentation);
-        }
-
-        @SuppressWarnings("unused")
-        public void registerGraphBuilderPlugins(HostedProviders hostedProviders, Plugins plugins, PartialEvaluator partialEvaluator, Predicate<ResolvedJavaMethod> includeMethodPredicate) {
+        public SubstratePartialEvaluator createPartialEvaluator(Providers providers, GraphBuilderConfiguration configForRoot, SnippetReflectionProvider snippetReflection, Architecture architecture) {
+            return new SubstratePartialEvaluator(providers, configForRoot, snippetReflection, architecture);
         }
 
         @SuppressWarnings("unused")
@@ -216,16 +205,18 @@ public final class TruffleFeature implements com.oracle.svm.core.graal.GraalFeat
     }
 
     private static void initializeTruffleReflectively(ClassLoader imageClassLoader) {
-        invokeStaticMethod("com.oracle.truffle.api.vm.LanguageCache", "initializeNativeImageState", Collections.singletonList(ClassLoader.class), imageClassLoader);
-        invokeStaticMethod("com.oracle.truffle.api.vm.InstrumentCache", "initializeNativeImageState", Collections.singletonList(ClassLoader.class), imageClassLoader);
+        invokeStaticMethod("com.oracle.truffle.polyglot.LanguageCache", "initializeNativeImageState", Collections.singletonList(ClassLoader.class), imageClassLoader);
+        invokeStaticMethod("com.oracle.truffle.polyglot.InstrumentCache", "initializeNativeImageState", Collections.singletonList(ClassLoader.class), imageClassLoader);
+        invokeStaticMethod("com.oracle.truffle.api.impl.TruffleLocator", "initializeNativeImageState", Collections.emptyList());
+        invokeStaticMethod("com.oracle.truffle.api.impl.HomeFinder", "initializeNativeImageState", Collections.emptyList());
     }
 
     public static void removeTruffleLanguage(String mimeType) {
-        invokeStaticMethod("com.oracle.truffle.api.vm.LanguageCache", "removeLanguageFromNativeImage", Collections.singletonList(String.class), mimeType);
+        invokeStaticMethod("com.oracle.truffle.polyglot.LanguageCache", "removeLanguageFromNativeImage", Collections.singletonList(String.class), mimeType);
     }
 
     private static Collection<Class<?>> getLanguageClasses() {
-        return invokeStaticMethod("com.oracle.truffle.api.vm.LanguageCache", "getLanguageClasses", Collections.emptyList());
+        return invokeStaticMethod("com.oracle.truffle.polyglot.LanguageCache", "getLanguageClasses", Collections.emptyList());
     }
 
     @SuppressWarnings("unchecked")
@@ -257,7 +248,7 @@ public final class TruffleFeature implements com.oracle.svm.core.graal.GraalFeat
         TruffleRuntime runtime = Truffle.getRuntime();
         UserError.guarantee(runtime != null, "TruffleRuntime not available via Truffle.getRuntime()");
         UserError.guarantee(runtime instanceof SubstrateTruffleRuntime || runtime instanceof DefaultTruffleRuntime,
-                        "Unsupported TruffleRuntime " + runtime.getName() + " (only SubstrateTruffleRuntime or DefaultTruffleRuntime allowed)");
+                        "Unsupported TruffleRuntime " + runtime.getClass().getName() + " (only SubstrateTruffleRuntime or DefaultTruffleRuntime allowed)");
 
         if (useTruffleCompiler()) {
             SubstrateTruffleRuntime truffleRuntime = (SubstrateTruffleRuntime) runtime;
@@ -266,17 +257,16 @@ public final class TruffleFeature implements com.oracle.svm.core.graal.GraalFeat
 
         /* sun.nio.fs.GnomeFileTypeDetector is currently not supported (GR-4863) */
         AfterRegistrationAccessImpl access = (AfterRegistrationAccessImpl) a;
-        access.findSubclasses(FileTypeDetector.class).stream()
-                        .filter(detector -> !detector.getClass().getName().equals("sun.nio.fs.GnomeFileTypeDetector"))
-                        .filter(detector -> !Modifier.isAbstract(detector.getModifiers())).forEach(this::safeLoadFileDetector);
+        access.findSubclasses(FileTypeDetector.class).stream().filter(detector -> !detector.getClass().getName().equals("sun.nio.fs.GnomeFileTypeDetector")).filter(
+                        detector -> !Modifier.isAbstract(detector.getModifiers())).forEach(this::safeLoadFileDetector);
 
         initializeTruffleReflectively(Thread.currentThread().getContextClassLoader());
     }
 
     private void safeLoadFileDetector(Class<? extends FileTypeDetector> detector) {
         try {
-            ImageSingletons.lookup(FilesSupport.class).addFileTypeDetector(detector.newInstance());
-        } catch (InstantiationException | IllegalAccessException ex) {
+            ImageSingletons.lookup(FilesSupport.class).addFileTypeDetector(detector.getDeclaredConstructor().newInstance());
+        } catch (Exception ex) {
             throw VMError.shouldNotReachHere(ex);
         }
     }
@@ -292,10 +282,12 @@ public final class TruffleFeature implements com.oracle.svm.core.graal.GraalFeat
         }
 
         // clean up the language cache
-        invokeStaticMethod("com.oracle.truffle.api.vm.LanguageCache", "resetNativeImageState", Collections.emptyList());
-        invokeStaticMethod("com.oracle.truffle.api.vm.InstrumentCache", "resetNativeImageState", Collections.emptyList());
-        invokeStaticMethod("com.oracle.truffle.api.vm.PolyglotRootNode", "resetNativeImageState", Collections.emptyList());
-
+        invokeStaticMethod("com.oracle.truffle.polyglot.LanguageCache", "resetNativeImageState", Collections.emptyList());
+        invokeStaticMethod("com.oracle.truffle.polyglot.InstrumentCache", "resetNativeImageState", Collections.emptyList());
+        invokeStaticMethod("org.graalvm.polyglot.Engine$ImplHolder", "resetPreInitializedEngine", Collections.emptyList());
+        invokeStaticMethod("com.oracle.truffle.api.impl.TruffleLocator", "resetNativeImageState", Collections.emptyList());
+        invokeStaticMethod("com.oracle.truffle.api.interop.Message", "resetNativeImageState", Collections.emptyList());
+        invokeStaticMethod("com.oracle.truffle.api.impl.HomeFinder", "resetNativeImageState", Collections.emptyList());
     }
 
     public static boolean useTruffleCompiler() {
@@ -303,7 +295,7 @@ public final class TruffleFeature implements com.oracle.svm.core.graal.GraalFeat
     }
 
     @Override
-    public void registerInvocationPlugins(Providers providers, SnippetReflectionProvider snippetReflection, InvocationPlugins invocationPlugins, boolean hosted) {
+    public void registerInvocationPlugins(Providers providers, SnippetReflectionProvider snippetReflection, InvocationPlugins invocationPlugins, boolean analysis, boolean hosted) {
         /*
          * We need to constant-fold Profile.isProfilingEnabled already during static analysis, so
          * that we get exact types for fields that store profiles.
@@ -355,31 +347,34 @@ public final class TruffleFeature implements com.oracle.svm.core.graal.GraalFeat
         return true;
     }
 
+    @SuppressWarnings("deprecation")
     @Override
     public void beforeAnalysis(BeforeAnalysisAccess access) {
         BeforeAnalysisAccessImpl config = (BeforeAnalysisAccessImpl) access;
 
-        getLanguageClasses().forEach(config::registerForReflectiveInstantiation);
+        getLanguageClasses().forEach(RuntimeReflection::registerForReflectiveInstantiation);
 
         config.registerHierarchyForReflectiveInstantiation(TruffleInstrument.class);
-        config.registerHierarchyForReflectiveInstantiation(InstrumentableFactory.class);
+        config.registerHierarchyForReflectiveInstantiation(com.oracle.truffle.api.instrumentation.InstrumentableFactory.class);
 
         if (useTruffleCompiler()) {
             SubstrateTruffleRuntime truffleRuntime = (SubstrateTruffleRuntime) Truffle.getRuntime();
             GraalFeature graalFeature = ImageSingletons.lookup(GraalFeature.class);
-            SnippetReflectionProvider snippetReflectionProvider = graalFeature.getHostedProviders().getSnippetReflection();
-            SubstrateTruffleCompiler truffleCompiler = new SubstrateTruffleCompiler(graalFeature.getHostedProviders().getGraphBuilderPlugins(), GraalSupport.getSuites(), GraalSupport.getLIRSuites(),
-                            GraalSupport.getRuntimeConfig().getBackendForNormalMethod(), snippetReflectionProvider);
-            truffleRuntime.setTruffleCompiler(truffleCompiler);
+            SnippetReflectionProvider snippetReflection = graalFeature.getHostedProviders().getSnippetReflection();
+            SubstrateTruffleCompiler truffleCompiler = truffleRuntime.initTruffleCompiler();
             truffleRuntime.lookupCallMethods(config.getMetaAccess());
 
             PartialEvaluator partialEvaluator = truffleCompiler.getPartialEvaluator();
-            registerKnownTruffleFields(config, partialEvaluator.getKnownTruffleFields());
+            registerKnownTruffleFields(config, partialEvaluator.getKnownTruffleTypes());
             support.registerInterpreterEntryMethodsAsCompiled(partialEvaluator, access);
 
             GraphBuilderConfiguration graphBuilderConfig = partialEvaluator.getConfigForParsing();
 
-            support.registerGraphBuilderPlugins(graalFeature.getHostedProviders(), graphBuilderConfig.getPlugins(), partialEvaluator, method -> includeCallee(method, null, null));
+            if (Options.TruffleInlineDuringParsing.getValue()) {
+                graphBuilderConfig.getPlugins().appendInlineInvokePlugin(
+                                new TruffleParsingInlineInvokePlugin(graalFeature.getHostedProviders().getReplacements(), graphBuilderConfig.getPlugins().getInvocationPlugins(), partialEvaluator,
+                                                method -> includeCallee(method, null, null)));
+            }
 
             registerNeverPartOfCompilation(graphBuilderConfig.getPlugins().getInvocationPlugins());
             graphBuilderConfig.getPlugins().getInvocationPlugins().closeRegistration();
@@ -393,7 +388,7 @@ public final class TruffleFeature implements com.oracle.svm.core.graal.GraalFeat
                             partialEvaluator.getProviders().getLowerer(),
                             partialEvaluator.getProviders().getReplacements(),
                             partialEvaluator.getProviders().getStampProvider(),
-                            snippetReflectionProvider,
+                            snippetReflection,
                             graalFeature.getHostedProviders().getWordTypes());
             newHostedProviders.setGraphBuilderPlugins(graphBuilderConfig.getPlugins());
 
@@ -418,18 +413,72 @@ public final class TruffleFeature implements com.oracle.svm.core.graal.GraalFeat
                 config.registerAsCompiled((AnalysisMethod) method);
             }
         }
+        firstAnalysisRun = true;
     }
 
-    private static void registerKnownTruffleFields(BeforeAnalysisAccessImpl config, KnownTruffleFields knownTruffleFields) {
+    static class TruffleParsingInlineInvokePlugin implements InlineInvokePlugin {
+
+        private final Replacements replacements;
+        private final InvocationPlugins invocationPlugins;
+        private final PartialEvaluator partialEvaluator;
+        private final Predicate<ResolvedJavaMethod> includeMethodPredicate;
+
+        TruffleParsingInlineInvokePlugin(Replacements replacements, InvocationPlugins invocationPlugins, PartialEvaluator partialEvaluator, Predicate<ResolvedJavaMethod> includeMethodPredicate) {
+            this.replacements = replacements;
+            this.invocationPlugins = invocationPlugins;
+            this.partialEvaluator = partialEvaluator;
+            this.includeMethodPredicate = includeMethodPredicate;
+        }
+
+        @Override
+        public InlineInfo shouldInlineInvoke(GraphBuilderContext builder, ResolvedJavaMethod original, ValueNode[] arguments) {
+            if (original.getAnnotation(NeverInline.class) != null) {
+                return InlineInfo.DO_NOT_INLINE_WITH_EXCEPTION;
+            } else if (invocationPlugins.lookupInvocation(original) != null) {
+                return InlineInfo.DO_NOT_INLINE_WITH_EXCEPTION;
+            } else if (original.getAnnotation(ExplodeLoop.class) != null) {
+                return InlineInfo.DO_NOT_INLINE_WITH_EXCEPTION;
+            } else if (replacements.hasSubstitution(original, builder.bci())) {
+                return InlineInfo.DO_NOT_INLINE_WITH_EXCEPTION;
+            }
+
+            for (ResolvedJavaMethod m : partialEvaluator.getNeverInlineMethods()) {
+                if (original.equals(m)) {
+                    return InlineInfo.DO_NOT_INLINE_WITH_EXCEPTION;
+                }
+            }
+
+            StructuredGraph graph = ((AnalysisMethod) original).getTypeFlow().getGraph();
+            if (graph != null && original.getCode() != null && includeMethodPredicate.test(original) && InliningUtilities.isTrivialMethod(graph) &&
+                            builder.getDepth() < InlineDuringParsingMaxDepth.getValue(HostedOptionValues.singleton())) {
+                return createStandardInlineInfo(original);
+            }
+
+            return null;
+        }
+    }
+
+    @Override
+    public void duringAnalysis(DuringAnalysisAccess access) {
+        if (firstAnalysisRun) {
+            firstAnalysisRun = false;
+            invokeStaticMethod("org.graalvm.polyglot.Engine$ImplHolder", "preInitializeEngine", Collections.emptyList());
+            access.requireAnalysisIteration();
+        }
+    }
+
+    private static void registerKnownTruffleFields(BeforeAnalysisAccessImpl config, KnownTruffleTypes knownTruffleFields) {
         for (Class<?> klass = knownTruffleFields.getClass(); klass != Object.class; klass = klass.getSuperclass()) {
             for (Field field : klass.getDeclaredFields()) {
-                try {
-                    Object value = field.get(knownTruffleFields);
-                    if (value != null && value instanceof ResolvedJavaField) {
-                        config.registerAsAccessed((AnalysisField) value);
+                if (Modifier.isPublic(field.getModifiers())) {
+                    try {
+                        Object value = field.get(knownTruffleFields);
+                        if (value != null && value instanceof ResolvedJavaField) {
+                            config.registerAsAccessed((AnalysisField) value);
+                        }
+                    } catch (IllegalAccessException ex) {
+                        throw VMError.shouldNotReachHere(ex);
                     }
-                } catch (IllegalAccessException ex) {
-                    throw VMError.shouldNotReachHere(ex);
                 }
             }
         }
@@ -574,6 +623,8 @@ public final class TruffleFeature implements com.oracle.svm.core.graal.GraalFeat
 
     @Override
     public void beforeCompilation(BeforeCompilationAccess config) {
+        BeforeCompilationAccessImpl access = (BeforeCompilationAccessImpl) config;
+
         if (GraalFeature.Options.PrintRuntimeCompileMethods.getValue() && blacklistViolations.size() > 0) {
             System.out.println();
             System.out.println("=== Found " + blacklistViolations.size() + " compilation blacklist violations ===");
@@ -624,22 +675,76 @@ public final class TruffleFeature implements com.oracle.svm.core.graal.GraalFeat
             }
             throw VMError.shouldNotReachHere("CompilerAsserts.neverPartOfCompilation reachable for runtime compilation");
         }
+
+        if (Options.TruffleCheckFrameImplementation.getValue() && useTruffleCompiler()) {
+            /*
+             * Check that only one Frame implementation is seen as instantiated by the static
+             * analysis. That allows de-virtualization of all calls to Frame methods in the
+             * interpreter.
+             *
+             * The DefaultTruffleRuntime uses multiple Frame implementations (DefaultVirtualFrame,
+             * DefaultMaterializedFrame, ReadOnlyFrame) to detect wrong usages of the Frame API, so
+             * we can only check when running with compilation enabled.
+             */
+            Optional<? extends ResolvedJavaType> optionalFrameType = access.getMetaAccess().optionalLookupJavaType(Frame.class);
+            if (optionalFrameType.isPresent()) {
+                HostedType frameType = (HostedType) optionalFrameType.get();
+                Set<HostedType> implementations = new HashSet<>();
+                collectImplementations(frameType, implementations);
+
+                if (implementations.size() > 1) {
+                    throw UserError.abort("More than one implementation of " + Frame.class.getTypeName() +
+                                    " found. For performance reasons, Truffle languages must not provide new implementations, and instead only use the single implementation provided by the Truffle runtime. " +
+                                    "To disable this check, add " + SubstrateOptionsParser.commandArgument(Options.TruffleCheckFrameImplementation, "-") + " to the native-image command line. " +
+                                    "Found classes: " + implementations.stream().map(m -> m.toJavaName(true)).collect(Collectors.joining(", ")));
+                } else {
+                    assert implementations.size() == 0 || implementations.iterator().next() == frameType.getSingleImplementor();
+                }
+            }
+        }
+    }
+
+    private static void collectImplementations(HostedType type, Set<HostedType> implementations) {
+        for (HostedType subType : type.getSubTypes()) {
+            if (!subType.isAbstract()) {
+                implementations.add(subType);
+            }
+            collectImplementations(subType, implementations);
+        }
     }
 }
 
-// @TargetClass(org.graalvm.compiler.truffle.OptimizedCallTarget.class)
-// final class Target_org.graalvm.compiler.truffle_OptimizedCallTarget {
-//
-// @Alias @RecomputeFieldValue(kind = RecomputeFieldValue.Kind.FromAlias)//
-// private static PrintStream OUT = JavaLangSubstitutions.runtimeSystemOut;
-// }
-//
-// @TargetClass(org.graalvm.compiler.truffle.debug.AbstractDebugCompilationListener.class)
-// final class Target_org.graalvm.compiler.truffle_debug_AbstractDebugCompilationListener {
-//
-// @Alias @RecomputeFieldValue(kind = RecomputeFieldValue.Kind.FromAlias)//
-// private static PrintStream OUT = JavaLangSubstitutions.runtimeSystemOut;
-// }
+@TargetClass(className = "org.graalvm.compiler.truffle.runtime.OptimizedCallTarget", onlyWith = TruffleFeature.IsEnabled.class)
+final class Target_org_graalvm_compiler_truffle_runtime_OptimizedCallTarget {
+
+    /**
+     * Truffle code can run during image generation. Discard the profiling information collected and
+     * start with a fresh profile at run time.
+     */
+    @Alias @RecomputeFieldValue(kind = Kind.Reset) //
+    OptimizedCompilationProfile compilationProfile;
+}
+
+// Checkstyle: stop
+
+@TargetClass(className = "com.oracle.truffle.polyglot.PolyglotContextImpl", onlyWith = TruffleFeature.IsEnabled.class)
+final class Target_com_oracle_truffle_polyglot_PolyglotContextImpl {
+
+    /**
+     * Truffle code can run during image generation, i.e., one or many contexts can be used during
+     * image generation. Truffle optimizes the case where only one context is ever created, and also
+     * stores additional information regarding which thread or threads used the context. We need to
+     * start with a completely fresh specialization state. To simplify that, all static state that
+     * stores context information is abstracted in the SingleContextState class, and it is enough to
+     * recompute a single static field to a new SingleContextState instance.
+     */
+    @Alias @RecomputeFieldValue(kind = Kind.NewInstance, declClassName = "com.oracle.truffle.polyglot.PolyglotContextImpl$SingleContextState", isFinal = true) //
+    static Target_com_oracle_truffle_polyglot_PolyglotContextImpl_SingleContextState singleContextState;
+}
+
+@TargetClass(className = "com.oracle.truffle.polyglot.PolyglotContextImpl$SingleContextState", onlyWith = TruffleFeature.IsEnabled.class)
+final class Target_com_oracle_truffle_polyglot_PolyglotContextImpl_SingleContextState {
+}
 
 /*
  * Java interoperability cannot be supported on Substrate VM. Ensure that the nodes are not used by
@@ -647,54 +752,21 @@ public final class TruffleFeature implements com.oracle.svm.core.graal.GraalFeat
  */
 
 @Delete
-@TargetClass(className = "com.oracle.truffle.api.interop.java.JavaFunctionObject", onlyWith = TruffleFeature.IsEnabled.class)
+@TargetClass(className = "com.oracle.truffle.polyglot.HostFunction", onlyWith = TruffleFeature.IsEnabled.class)
 final class Target_com_oracle_truffle_api_interop_java_JavaFunctionObject {
 }
 
 @Delete
-@TargetClass(className = "com.oracle.truffle.api.interop.java.JavaInteropReflect", onlyWith = TruffleFeature.IsEnabled.class)
+@TargetClass(className = "com.oracle.truffle.polyglot.HostInteropReflect", onlyWith = TruffleFeature.IsEnabled.class)
 final class Target_com_oracle_truffle_api_interop_java_JavaInteropReflect {
 }
 
 @Delete
-@TargetClass(className = "com.oracle.truffle.api.interop.java.FunctionProxyHandler", onlyWith = TruffleFeature.IsEnabled.class)
+@TargetClass(className = "com.oracle.truffle.polyglot.FunctionProxyHandler", onlyWith = TruffleFeature.IsEnabled.class)
 final class Target_com_oracle_truffle_api_interop_java_FunctionProxyHandler {
 }
 
 @Delete
-@TargetClass(className = "com.oracle.truffle.api.interop.java.ObjectProxyHandler", onlyWith = TruffleFeature.IsEnabled.class)
+@TargetClass(className = "com.oracle.truffle.polyglot.ObjectProxyHandler", onlyWith = TruffleFeature.IsEnabled.class)
 final class Target_com_oracle_truffle_api_interop_java_ObjectProxyHandler {
-}
-
-@Delete
-@TargetClass(className = "com.oracle.truffle.api.interop.java.ObjectProxyHandler", innerClass = "MethodNode", onlyWith = TruffleFeature.IsEnabled.class)
-final class Target_com_oracle_truffle_api_interop_java_ObjectProxyHandler_MethodNodeGen {
-}
-
-@Delete
-@TargetClass(className = "com.oracle.truffle.api.interop.java.ObjectProxyHandlerFactory", innerClass = "MethodNodeGen", onlyWith = TruffleFeature.IsEnabled.class)
-final class Target_com_oracle_truffle_api_interop_java_ObjectProxyHandlerFactory_MethodNodeGen {
-}
-
-@Delete
-@TargetClass(className = "com.oracle.truffle.api.interop.java.ObjectProxyHandlerFactory$MethodNodeGen$CachedData", onlyWith = TruffleFeature.IsEnabled.class)
-final class Target_com_oracle_truffle_api_interop_java_ObjectProxyHandlerFactory_MethodNodeGen_CachedData {
-}
-
-@Delete
-@TargetClass(className = "com.oracle.truffle.api.interop.java.ObjectProxyHandler", innerClass = "InvokeAndReadExecNode", onlyWith = TruffleFeature.IsEnabled.class)
-final class Target_com_oracle_truffle_api_interop_java_ObjectProxyHandler_InvokeAndReadExecNode {
-}
-
-@Delete
-@TargetClass(className = "com.oracle.truffle.api.interop.java.ObjectProxyHandlerFactory", innerClass = "InvokeAndReadExecNodeGen", onlyWith = TruffleFeature.IsEnabled.class)
-final class Target_com_oracle_truffle_api_interop_java_ObjectProxyHandlerFactory_InvokeAndReadExecNodeGen {
-}
-
-@TargetClass(className = "org.graalvm.compiler.truffle.OptimizedCallTarget", onlyWith = TruffleFeature.IsEnabled.class)
-final class Target_org_graalvm_compiler_truffle_OptimizedCallTarget {
-    // Checkstyle: stop
-    @Alias @RecomputeFieldValue(kind = Kind.FieldOffset, declClass = InstalledCode.class, name = "entryPoint")//
-    private static long ENTRY_POINT_OFFSET;
-    // Checkstyle: resume
 }
