@@ -52,12 +52,12 @@ public class StatementProfilerExample extends TruffleInstrument {
     protected void onCreate(Env env) {
         for (Class<? extends ProfilerFrontEnd> frontEnd : installedFrontEnds) {
             try {
-                frontEnd.newInstance().onAttach(this);
+                frontEnd.getDeclaredConstructor().newInstance().onAttach(this);
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
         }
-        env.getInstrumenter().attachFactory(SourceSectionFilter.newBuilder().tagIs(InstrumentationTestLanguage.STATEMENT).build(), new ExecutionEventNodeFactory() {
+        env.getInstrumenter().attachExecutionEventFactory(SourceSectionFilter.newBuilder().tagIs(InstrumentationTestLanguage.STATEMENT).build(), new ExecutionEventNodeFactory() {
             public ExecutionEventNode create(final EventContext context) {
                 return new ExecutionEventNode() {
                     private final Counter counter = createCounter(context.getInstrumentedSourceSection());
